--- a/resources/views/admin/list.html
+++ b/resources/views/admin/list.html
@@ -1,26 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="style/css/ch-ui.admin.css">
-    <link rel="stylesheet" href="style/font/css/font-awesome.min.css">
-    <script type="text/javascript" src="style/js/jquery.js"></script>
-    <script type="text/javascript" src="style/js/ch-ui.admin.js"></script>
-</head>
-<body>
-<!--面包屑导航 开始-->
+@extends('layouts.admin')
+@section('admin-content')
+<!--麵包屑導航 開始-->
 <div class="crumb_warp">
     <!--<i class="fa fa-bell"></i> 欢迎使用登陆网站后台，建站的首选工具。-->
-    <i class="fa fa-home"></i> <a href="#">首页</a> &raquo; <a href="#">商品管理</a> &raquo; 添加商品
+    <i class="fa fa-home"></i> <a href="#">首頁</a> &raquo; <a href="#">商品管理</a> &raquo; 添加商品
 </div>
-<!--面包屑导航 结束-->
+<!--麵包屑導航 結束-->
 
-<!--结果页快捷搜索框 开始-->
+<!--結果頁快捷搜索框 開始-->
 <div class="search_wrap">
     <form action="" method="post">
         <table class="search_tab">
             <tr>
-                <th width="120">选择分类:</th>
+                <th width="120">選擇分類:</th>
                 <td>
                     <select onchange="location.href=this.value;">
                         <option value="">全部</option>
@@ -28,19 +20,19 @@
                         <option value="http://www.sina.com">新浪</option>
                     </select>
                 </td>
-                <th width="70">关键字:</th>
-                <td><input type="text" name="keywords" placeholder="关键字"></td>
-                <td><input type="submit" name="sub" value="查询"></td>
+                <th width="70">關鍵字:</th>
+                <td><input type="text" name="keywords" placeholder="關鍵字"></td>
+                <td><input type="submit" name="sub" value="查詢"></td>
             </tr>
         </table>
     </form>
 </div>
-<!--结果页快捷搜索框 结束-->
+<!--結果頁快捷搜索框 結束-->
 
-<!--搜索结果页面 列表 开始-->
+<!--搜索結果頁面 列表 開始-->
 <form action="#" method="post">
     <div class="result_wrap">
-        <!--快捷导航 开始-->
+        <!--快捷導航 開始-->
         <div class="result_content">
             <div class="short_wrap">
                 <a href="#"><i class="fa fa-plus"></i>新增文章</a>
@@ -48,7 +40,7 @@
                 <a href="#"><i class="fa fa-refresh"></i>更新排序</a>
             </div>
         </div>
-        <!--快捷导航 结束-->
+        <!--快捷導航 結束-->
     </div>
 
     <div class="result_wrap">
@@ -58,12 +50,12 @@
                     <th class="tc" width="5%"><input type="checkbox" name=""></th>
                     <th class="tc">排序</th>
                     <th class="tc">ID</th>
-                    <th>标题</th>
-                    <th>审核状态</th>
-                    <th>点击</th>
-                    <th>发布人</th>
-                    <th>更新时间</th>
-                    <th>评论</th>
+                    <th>標題</th>
+                    <th>審核狀態</th>
+                    <th>點擊</th>
+                    <th>發佈人</th>
+                    <th>更新時間</th>
+                    <th>評論</th>
                     <th>操作</th>
                 </tr>
                 <tr>
@@ -82,7 +74,7 @@
                     <td></td>
                     <td>
                         <a href="#">修改</a>
-                        <a href="#">删除</a>
+                        <a href="#">刪除</a>
                     </td>
                 </tr>
 
@@ -102,7 +94,7 @@
                     <td></td>
                     <td>
                         <a href="#">修改</a>
-                        <a href="#">删除</a>
+                        <a href="#">刪除</a>
                     </td>
                 </tr>
 
@@ -122,7 +114,7 @@
                     <td></td>
                     <td>
                         <a href="#">修改</a>
-                        <a href="#">删除</a>
+                        <a href="#">刪除</a>
                     </td>
                 </tr>
             </table>
@@ -130,16 +122,16 @@
 
             <div class="page_nav">
                 <div>
-                    <a class="first" href="/wysls/index.php/Admin/Tag/index/p/1.html">第一页</a>
-                    <a class="prev" href="/wysls/index.php/Admin/Tag/index/p/7.html">上一页</a>
+                    <a class="first" href="/wysls/index.php/Admin/Tag/index/p/1.html">第一頁</a>
+                    <a class="prev" href="/wysls/index.php/Admin/Tag/index/p/7.html">上一頁</a>
                     <a class="num" href="/wysls/index.php/Admin/Tag/index/p/6.html">6</a>
                     <a class="num" href="/wysls/index.php/Admin/Tag/index/p/7.html">7</a>
                     <span class="current">8</span>
                     <a class="num" href="/wysls/index.php/Admin/Tag/index/p/9.html">9</a>
                     <a class="num" href="/wysls/index.php/Admin/Tag/index/p/10.html">10</a>
-                    <a class="next" href="/wysls/index.php/Admin/Tag/index/p/9.html">下一页</a>
-                    <a class="end" href="/wysls/index.php/Admin/Tag/index/p/11.html">最后一页</a>
-                    <span class="rows">11 条记录</span>
+                    <a class="next" href="/wysls/index.php/Admin/Tag/index/p/9.html">下一頁</a>
+                    <a class="end" href="/wysls/index.php/Admin/Tag/index/p/11.html">最後一頁</a>
+                    <span class="rows">11 條記錄</span>
                 </div>
             </div>
 
@@ -158,8 +150,7 @@
         </div>
     </div>
 </form>
-<!--搜索结果页面 列表 结束-->
+<!--搜索結果頁面 列表 結束-->
 
 
-</body>
-</html>
+@endsection
