後台文章分類刪除及Ajax異步模擬DELETE方法
1.  DELETE admin/category/{category}  {參數} 刪除單個分類 {category}此參數無法透過 Request $request
      因此 admin/category/11111 把參數帶入 html name='cate_id' value=11111

2. 更改資料庫 CREATED_AT 、UPDATED_AT 欄位名稱
    Laravel 5.4 提供新功能
    如果你需要自定义用于存储时间戳的字段名称，可以在模型中设置 CREATED_AT 和 UPDATED_AT 常量：
     <?php

     class Flight extends Model
     {
         const CREATED_AT = 'creation_date';
         const UPDATED_AT = 'last_update';
     }

3. JS UI 有bug  無法單獨使用 jq 3.11

Signed-off-by: riitei <2590119197@qq.com>

--- a/resources/views/admin/style/css/ch-ui.admin.css
+++ b/resources/views/admin/style/css/ch-ui.admin.css
@@ -69,7 +69,7 @@ textarea:focus, input[type="text"]:focus, input[type="password"]:focus, input[ty
 }
 
 input[type='text'], input[type='password'] {
-    width: 350;
+    width: 350px;
     margin-right: 5px;
     padding: 6px 5px;
     line-height: 12px;
@@ -225,7 +225,7 @@ input[type='button'].back:hover {
 }
 
 .login_box .form ul li input[type='submit'] {
-    font-family: "微软雅黑";
+    font-family: "微軟雅黑";
     width: 240px;
     height: 33px;
     border-radius: 3px;
