1. blade運用 在 ＠section(替換內容)
@show 替換內容

＠endsection

＠section(替換內容)

@parent 顯示替換內容

＠endsection

2. 正規表達式 運用

範例
Route::get('user/{name}', function ($name) {
    //
})->where('name', '[A-Za-z]+');

Route::get('user/{id}', function ($id) {
    //
})->where('id', '[0-9]+');

Route::get('user/{id}/{name}', function ($id, $name) {
    //
})->where(['id' => '[0-9]+', 'name' => '[a-z]+']);
//---
//**

Signed-off-by: riitei <2590119197@qq.com>

--- a/resources/views/home/css/index.css
+++ b/resources/views/home/css/index.css
@@ -401,7 +401,7 @@ h2.title_tj p {
     clear: both;
     margin: 10px 0 0 0;
     display: inline-block;
-    background: #f6f6f6 url(../images/time.jpg) 15px center no-repeat;
+    /*background: #f6f6f6 url(../images/time.jpg) 15px center no-repeat;*/
     line-height: 26px;
     height: 26px;
     color: #838383;
